# tremorguard

./: .gitignore  README.md  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  jest.config.js  package-lock.json  package.json  requirements.txt  tsconfig.build.json  tsconfig.json  vercel.json
backend/alembic/: env.py
backend/app/: database.py  main.py  models.py  security.py  seed_demo.py  settings.py
backend/data/: users.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/test/: app.e2e-spec.ts  medical-records.e2e-spec.ts
backend/tests/: test_business_loop.py
device/: README.md
device/firmware/: CMakeLists.txt  sdkconfig.defaults
device/firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  hmac_auth.c  hmac_auth.h  main.c  mpu6050.c  mpu6050.h  ring_buffer.c  ring_buffer.h  tremor_sample.c  tremor_sample.h  uploader.c  uploader.h
device/protocol/: upload_contract.md
device/tools/: replay_verify.py  serial_capture.py
documents/: backend_development_plan.md  no-mock-data-validation.md  system_architecture.md  震颤卫士PRD构建指南.md
scripts/: site-down.sh  site-restart.sh  site-status.sh  site-up.sh  validate-no-mock-data.mjs
tremor-guard-frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
tremor-guard-frontend/api/: index.js
tremor-guard-frontend/scripts/: prepare-vercel-backend.mjs
tremor-guard-frontend/src/: App.jsx  index.css
tremor-guard-frontend/test/: api.test.mjs  (+1 more)
(+45 files in other folders)
